# flashcard

./: .gitignore  README.md  start_server.sh
client/: App.tsx  app.json  package-lock.json  package.json
client/src/components/: FlashCard.tsx  FlashcardListItem.tsx  ResearchInterestItem.tsx  SearchBox.tsx
client/src/navigation/: AppNavigator.tsx
client/src/screens/: CreateFlashcardScreen.tsx  CreateListScreen.tsx  FlashcardListScreen.tsx  FlashcardScreen.tsx  FloatingScreen.tsx  (+2 more)
deploy/: aws-config.sh  aws-deploy.sh  verify-deployment.sh
deploy/terraform/: main.tf  user_data.sh  variables.tf
server/flashcards-api/: .env  Dockerfile  README.md  SEARCH_SETUP.md  docker-compose.yml  env.template  main.py  migrate_to_mongodb.py  mongo-init.js  pyproject.toml  requirements.txt  test_mongodb.py  test_search.py
server/flashcards-api/app/: __init__.py  config.py  main.py
server/flashcards-api/app/api/: deps.py
server/flashcards-api/app/api/routes/: __init__.py  auth.py  decks.py  flashcards.py  search.py  users.py
server/flashcards-api/app/core/: errors.py  security.py
server/flashcards-api/app/db/: __init__.py  database.py  mongodb.py
server/flashcards-api/app/db/repositories/: __init__.py  base.py  decks.py  flashcards.py  mongo_repositories.py  users.py
server/flashcards-api/app/models/: deck.py  flashcard.py  helper.py  mongo_models.py  user.py
server/flashcards-api/app/schemas/: __init__.py  deck.py  flashcard.py  search.py  user.py
server/flashcards-api/app/services/: __init__.py  search_service.py
server/flashcards-api/tests/: test_db.py
(+3 files in other folders)
